@@ -13,21 +13,21 @@ public class FunctionInRangeTest {
     @Test
     public void whenLine() {
         List<Double> result = FunctionInRange.diapason(5, 8, x -> 2 * x + 1);
-        List<Double> expected = Arrays.asList(11D, 13D, 15D);
+        List<Double> expected = List.of(11D, 13D, 15D);
         assertThat(result, is(expected));
     }
 
     @Test
     public void whenSquare() {
         List<Double> result = FunctionInRange.diapason(5, 8, x -> x * x * 2);
-        List<Double> expected = Arrays.asList(50D, 72D, 98D);
+        List<Double> expected = List.of(50D, 72D, 98D);
         assertThat(result, is(expected));
     }
 
     @Test
     public void whenShow() {
         List<Double> result = FunctionInRange.diapason(5, 8, x -> Math.pow(2, x));
-        List<Double> expected = Arrays.asList(32D, 64D, 128D);
+        List<Double> expected = List.of(32D, 64D, 128D);
         assertThat(result, is(expected));
     }
 
